major interface changes before to-do section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
   <body class="box">
+      <img class="mountains animated fadeInUp" src="indexImg/cascade.png">
       <div class="container">
           <h1 class="header animated fadeInDown">CitrusTrack</h1>
-          <p class="info animated fadeIn">Task management simplified<p>
+          <p class="info animated fadeIn">Task management simplified.<p>
       </div>
-<img class="mountains animated fadeInUp" src="indexImg/mountains.png">
+
   </body>
 </html>
