--- a/task.html
+++ b/task.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="buttoncss/css/component.css">
+    <link rel="stylesheet" type="text/css" href="buttoncss/css/default.css">
   </head>
   <body class="box">
       <div class="topnav container">
-          <a class="active " href="#home">CitrusTask</a>
-          <a href="#" >About</a>
-          <a href="#">GitHub</a>
+          <a class="active " href="index.html">CitrusTask</a>
+          <a class="detail" href="#" >About</a>
+          <a class="detail" target="_blank" href="https://github.com/gradyy/citrustrack">GitHub</a>
     </div>
-
+    <p>
+        <button class="btn btn-2 btn-2c">task #1</button>
   </body>
 </html>
