major style changes pre-input window

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
   <head>
     <title>title</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="indexstyles.css">
     <link rel="stylesheet" href="animate.css">
     <script src="https://code.jquery.com/jquery-3.2.1.js" ></script>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body class="box">
       <img class="mountains animated fadeInUp" src="indexImg/cascade.png">
       <div class="container">
           <h1 class="header animated fadeInDown">CitrusTrack</h1>
           <p class="info animated fadeIn">Task management simplified.<p>
+              <br></br> <br></br>
+          <!--<a id="link" class="link animated fadeIn" href="task.html">Let's begin.</a>-->
+          <a class="button animated fadeInLeft" href="task.html"><svg><g><line x2="227.62" y1="31.28" y2="31.28"></line><polyline points="222.62 25.78 228.12 31.28 222.62 36.78"></polyline><circle cx="224.67" cy="30.94" r="30.5" transform="rotate(180 224.67 30.94) scale(1, -1) translate(0, -61)"></circle></g></svg><font></font></a>
       </div>
-
   </body>
 </html>
