--- a/task.html
+++ b/task.html
@@ -18,7 +18,13 @@
           <a class="detail" href="#" >About</a>
           <a class="detail" target="_blank" href="https://github.com/gradyy/citrustrack">GitHub</a>
     </div>
-    <p>
-        <button class="btn btn-2 btn-2c">task #1</button>
+
+    <div class="mascot">
+        <img id="mascot" align="middle" src="indexImg/bear.png">
+    </div>
+
+    <div class="taskList" style="text-align:center;">
+        <button id="task" class="btn btn-2 btn-2c">task #1</button>
+    </div>
   </body>
 </html>
