begin work on about

--- a/task.html
+++ b/task.html
@@ -16,8 +16,10 @@
   <body class="box">
       <div class="topnav container">
           <a class="active " href="index.html">CitrusTask</a>
-          <a class="detail" href="#" >About</a>
+          <a class="detail" href="about.html" >About</a>
           <a class="detail" target="_blank" href="https://github.com/gradyy/citrustrack">GitHub</a>
+          <a id="ambient" class="detail" >Coffeehouse</a>
+
     </div>
         <div class="mascot">
             <img id="mascot" class="animated fadeInUp" align="middle" src="indexImg/bear.png">
