added basic task creation

--- a/task.html
+++ b/task.html
@@ -50,7 +50,7 @@
                         <br></br>
                         <table style="text-align:center; width:100%">
                             <tr>
-                                <td class="animated fadeInDown confirm1"><img src="indexImg/iconaddgreen.png">confirm</td>
+                                <td class="animated fadeInDown confirm1" onclick="createTask();closeOverlay();"><img src="indexImg/iconaddgreen.png">confirm</td>
                                 <td class="animated fadeInDown confirm2"><img src="indexImg/iconremovered.png">cancel</td>
                             </tr>
                         </table>
