final changes to about

--- a/task.html
+++ b/task.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>title</title>
+    <title>CitrusTask</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="animate.css">
     <script src="https://code.jquery.com/jquery-3.2.1.js" ></script>
@@ -20,7 +20,6 @@
           <a class="detail" href="about.html" >About</a>
           <a class="detail" target="_blank" href="https://github.com/gradyy/citrustrack">GitHub</a>
     </div>
-    <a id="ambient" class="detail" >Coffeehouse</a>
         <div class="mascot">
             <img id="mascot" class="animated fadeInUp" align="middle" src="indexImg/bear.png">
         </div>
