--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>title</title>
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="indexstyles.css">
     <link rel="stylesheet" href="animate.css">
     <script src="https://code.jquery.com/jquery-3.2.1.js" ></script>
